========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-01-16

  - Some cleanup of internal tools.

  - Added some basic unit tetsts for beancount.tools.sheets_upload.

  - Moved bin/upload-to-sheets to src/python/beancount/tools/sheets_upload.py
    and replaced it with an associated stub for it.

  - Moved bin/treeify to src/python/beancount/tools/treeify.py. The script is
    still usable in a standalone form (no new dependencies have been added). To
    have all the source code in one place is more convenient for maintenance.

  - Created a beancount.tools package to contain all standalone tools which
    don't depend on Beancount modules or packages.

  - Removed branch "returns2" and moved associated projects script
    beancount.projects.returns to experiments/returns. This code isn't robust
    enough to work for everyone, and so therefore I'm moving it back to
    experiments until I have time to produce something that will work very
    robustly, and on all my own accounts as well.


2017-01-15

  (from branch "conversions")

  - Created and test beancount.core.convert Posting and Position conversion
    functions: get_units(), get_cost(), get_weight(), get_value() (for market
    value).

  - Implemented Inventory.reduce() and associated test, which works in
    conjunction with those.

  - Implemented more straightforward versions of convert_position() and
    convert_amount() in module beancount.core.convert, to convert positions and
    amounts to other currencies.

  - Deprecated Inventory.units(); use Inventory.reduce(convert.get_units)

  - Deprecated Inventory.cost(); use Inventory.reduce(convert.get_cost)

  - Deprecated Inventory.get_units() to Inventory.get_currency_units() in order to
    avoid future name confusion.

  - Deprecated Position.at_cost(); use convert.get_cost(position) instead.
