@@ -147,21 +147,23 @@ setup(
     download_url="http://bitbucket.org/blais/beancount",
 
     package_dir = {'': 'src/python',},
-    packages = ['beancount',
-                'beancount.parser',
-                'beancount.core',
-                'beancount.ops',
-                'beancount.plugins',
-                'beancount.query',
-                'beancount.reports',
-                'beancount.scripts',
-                'beancount.prices',
-                'beancount.prices.sources',
-                'beancount.web',
-                'beancount.docs',
-                'beancount.ingest',
-                'beancount.ingest.importers',
-                'beancount.utils'],
+    packages = [
+        'beancount',
+        'beancount.parser',
+        'beancount.core',
+        'beancount.ops',
+        'beancount.plugins',
+        'beancount.query',
+        'beancount.reports',
+        'beancount.scripts',
+        'beancount.prices',
+        'beancount.prices.sources',
+        'beancount.web',
+        'beancount.ingest',
+        'beancount.ingest.importers',
+        'beancount.utils',
+        'beancount.tools',
+    ],
 
     package_data = {
         'beancount.web': ['*.ico',
