@@ -1,7 +1,0 @@
-"""Libraries and scripts used to create and maintain Beancount documentation in Google Docs.
-
-The code in here is not part of Beancount's usage per-se, but rather used to
-automate some of its documentation tasks.
-"""
-__copyright__ = "Copyright (C) 2015-2017  Martin Blais"
-__license__ = "GNU GPLv2"
